--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
     <!------- End Landing --->
     <!------- Services ------>
-    <section class="services">
+    <section class="services" id="services">
       <div class="container">
         <div class="main-heading">
           <h2>services</h2>
