--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <link rel="stylesheet" href="css/all.min.css" />
     <!-- Style CSS Files -->
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/landing.css" />
-    <link rel="stylesheet" href="css/services.css" />
-    <link rel="stylesheet" href="css/design.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,7 +23,7 @@
     />
   </head>
   <body>
-    <!------- Header -------->
+    <!------- Header ---------->
     <header>
       <div class="container">
         <a href="#" class="logo"><img src="images/logo.png" alt="logo" /></a>
@@ -47,8 +43,8 @@
         </nav>
       </div>
     </header>
-    <!------- End Header ---->
-    <!------- Landing ------->
+    <!------- End Header ------>
+    <!------- Landing --------->
     <section class="landing">
       <div class="overlay"></div>
       <div class="text">
@@ -73,8 +69,8 @@
         <li></li>
       </ul>
     </section>
-    <!------- End Landing --->
-    <!------- Services ------>
+    <!------- End Landing ----->
+    <!------- Services -------->
     <section class="services" id="services">
       <div class="container">
         <div class="main-heading">
@@ -132,8 +128,8 @@
         </div>
       </div>
     </section>
-    <!------- End Services -->
-    <!------- Design -------->
+    <!------- End Services ---->
+    <!------- Design ---------->
     <section class="design">
       <div class="image">
         <img src="images/mobile.png" alt="" />
@@ -148,7 +144,212 @@
         </ul>
       </div>
     </section>
-    <!------- End Design ---->
+    <!------- Portfolio ------->
+    <section class="portfolio" id="portfolio">
+      <div class="container">
+        <div class="main-heading">
+          <h2>Portfolio</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <ul>
+          <li class="active">All</li>
+          <li>App</li>
+          <li>Photo</li>
+          <li>Web</li>
+          <li>Print</li>
+        </ul>
+        <div class="img-container">
+          <div class="box">
+            <img src="images/shuffle-01.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-02.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-03.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-04.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-05.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-06.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-07.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class="box">
+            <img src="images/shuffle-08.jpg" />
+            <div class="caption">
+              <h4>Awesome image</h4>
+              <p>Photography</p>
+            </div>
+          </div>
+        </div>
+        <a href="" class="more">More</a>
+      </div>
+    </section>
+    <!------- End Portfolio --->
+    <!------- Video  ---->
+
+    <section class="video">
+      <video autoplay muted loop>
+        <source src="images/awesome-video.mp4" type="video/mp4" />
+      </video>
+      <div class="text">
+        <h2>Super Awesome Video Here</h2>
+        <p>Its All You Need</p>
+        <button>See More</button>
+      </div>
+    </section>
+    <!------- End Video ---->
+    <!------- About -------->
+    <section class="about" id="about">
+      <div class="container">
+        <div class="main-heading">
+          <h2>About Us</h2>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+        </div>
+        <img src="images/about.png" alt="about.png" />
+      </div>
+    </section>
+    <!------- End About ---->
+    <!------- Stats -------->
+    <section class="stats">
+      <div class="container">
+        <div class="box">
+          <i class="fas fa-mug-hot"></i>
+          <div class="numcer">1,236</div>
+          <p>Coffee Drinks</p>
+        </div>
+        <div class="box">
+          <i class="far fa-folder"></i>
+          <div class="numcer">256</div>
+          <p>Completed Projects</p>
+        </div>
+        <div class="box">
+          <i class="far fa-envelope"></i>
+          <div class="numcer">1,743</div>
+          <p>Mail Sent</p>
+        </div>
+        <div class="box">
+          <i class="fas fa-trophy"></i>
+          <div class="numcer">17</div>
+          <p>Awards Received</p>
+        </div>
+      </div>
+    </section>
+    <!------- End Stats ---->
+    <!------- Our Skills --->
+    <section class="our-skills">
+      <div class="container">
+        <div class="testimonials">
+          <h3>Testimonials</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="content">
+            <img src="images/skills-01.jpg" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>Juhn Doe, CEO</p>
+            </div>
+          </div>
+          <div class="content">
+            <img src="images/skills-02.jpg" />
+            <div class="text">
+              Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+              Mauris blandit aliquet elit, eget tincidunt.
+              <p>Juhn Doe, CEO</p>
+            </div>
+          </div>
+          <ul class="bullets">
+            <li></li>
+            <li class="active"></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="skills">
+          <h3>skills</h3>
+          <p>
+            Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem.
+            Mauris blandit aliquet elit, eget tincidunt.
+          </p>
+          <div class="prog-content">
+            <h4>Adobe</h4>
+            <div class="prog">
+              <span style="width: 90%" data-progress="90%"></span>
+            </div>
+          </div>
+          <div class="prog-content">
+            <h4>HTML &amp; CSS</h4>
+            <div class="prog">
+              <span style="width: 85%" data-progress="85%"></span>
+            </div>
+          </div>
+          <div class="prog-content">
+            <h4>JS</h4>
+            <div class="prog">
+              <span style="width: 80%" data-progress="80%"></span>
+            </div>
+          </div>
+          <div class="prog-content">
+            <h4>PHP</h4>
+            <div class="prog">
+              <span style="width: 90%" data-progress="90%"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!------- End Our Skills -->
+    <!------- Start Quote -->
+    <section class="quote">
+      <div class="container">
+        <q
+          >accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet
+          elit, eget tincidunt</q
+        >
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
