--- a/index.html
+++ b/index.html
@@ -224,7 +224,6 @@
     </section>
     <!------- End Portfolio --->
     <!------- Video  ---->
-
     <section class="video">
       <video autoplay muted loop>
         <source src="images/awesome-video.mp4" type="video/mp4" />
@@ -435,6 +434,53 @@
       </div>
     </section>
     <!------- End Subscribe -->
+    <section class="contact">
+      <div class="container">
+        <div class="main-heading">
+          <h2>contact us</h2>
+          <p> Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.</p>
+        </div>
+        <div class="content">
+          <form action="">
+            <input class="main-input" type="text" name="name" placeholder="YOUR NAME">
+            <input class="main-input" type="email" name="email" placeholder="YOUR MAIL">
+            <textarea class="main-input" name="message" placeholder="YOUR MESSAGE"></textarea>
+            <input type="submit" value="SEND MESSAGE">
+          </form>
+          <div class="info">
+            <h4>Get In Touch</h4>
+            <span class="phone">+00 123.456.789</span>
+            <span class="phone">+00 123.456.789</span>
+            <h4>Where We Are</h4>
+            <address>
+              Awesome Address 17 <br /> New York, NYC <br /> 123-4567-890 <br /> USA 
+            </address>
+          </div>
+        </div>
+    </section>
+    <!------- Contact Us --->
+    <!------- End Contact Us -->
+    <!-------Footer -------->
+    <footer>
+      <div class="container">
+        <a href="#" class="logo"><img src="images/logo.png" alt="logo"></a>
+        <p>We are social</p>
+        <div class="social-icons">
+          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-twitter"></i>
+          <i class="fas fa-home"></i>
+          <i class="fab fa-linkedin"></i>
+        </div>
+        <p class="copyright">&copy; 2021 <span>Kasper</span> All Right Reserved</p>
+      </div>
+    </footer>
+    <!------- End Footer -------->
+
+
+
+
+
+    <!------- JavaScript --->
     <script src="js/script.js"></script>
   </body>
 </html>
